# heliopause.32blit

./: .gitignore  .gitmodules  BUILD.gn  CMakeLists.txt  Makefile  README.md  activate.bat  assets.yml  banner.txt  bootstrap.bat  bootstrap.sh  env_setup.json  game.cpp  game.hpp  go.fish  go.sh  metadata.yml  planet_editor.html  planet_editor.js  planet_editor.wasm
apps/: flight_metadata.yml  planet_editor_assets.yml  planet_editor_metadata.yml
apps/assets/: black_and_white_palette.gpl  endesga-64.gpl
apps/flight/: CMakeLists.txt  main.cpp  platform.cpp  platform.hpp  sector.cpp  sector.hpp  ship.cpp  ship.hpp  spark.cpp  spark.hpp  starfield.cpp  starfield.hpp
apps/planet_editor/: CMakeLists.txt  colors.hpp  draw.cpp  draw.hpp  main.cpp  menu.cpp  menu.hpp  planet.cpp  planet.hpp  planet_editor.cpp  planet_editor.hpp  platform.cpp  platform.hpp
apps/zsolitaire/: CMakeLists.txt  assets.yml  main.cpp  metadata.yml
apps/zsolitaire/assets/: card_font.cpp  card_font.hpp  cards.tmx  sprite_sheet.tsx
build_overrides/: pigweed.gni
docs/: planet_editor.js  planet_editor.wasm
docs/flight/: flight.js  flight.wasm  index.html
libs/: CMakeLists.txt
libs/lib_colors/: CMakeLists.txt  colors.cpp
libs/lib_colors/include/: colors.hpp
libs/lib_draw/: CMakeLists.txt
libs/lib_draw/include/: draw.hpp
libs/lib_menu/: CMakeLists.txt  menu.cpp
libs/lib_menu/include/: menu.hpp
libs/lib_planet/: CMakeLists.txt  planet.cpp  planet_types.cpp
libs/lib_planet/include/: planet.hpp  planet_types.hpp
libs/lib_random/: CMakeLists.txt  random.cpp
libs/lib_random/include/: random.hpp
libs/lib_simplexnoise/: CMakeLists.txt
libs/lib_trig/: CMakeLists.txt  trig.cpp
libs/lib_trig/include/: trig.hpp
libs/lib_vec2/: CMakeLists.txt
libs/lib_vec2/include/: vec2.hpp
source/: CMakeLists.txt  colors.cpp  colors.h  colors.hpp  draw.cpp  game.cpp  game.hpp  heliopause.cpp  heliopause.hpp  main.cpp  main.hpp  menu.cpp  menu.hpp  planet.cpp  planet.h  planet.hpp  planet_editor.cpp  planet_editor.hpp  planet_types.hpp  platform.cpp  platform.hpp  random.cpp  random.hpp
source/lib_simplexnoise/: SimplexNoise.cpp
source/simplexnoise/: CMakeLists.txt
